test/badForget2.slq
// args: --run

def main(){
	y:=3:int[4];
	(1:int[4])+(3:int[4]):=y; // error
}
